# nothing

./: .gitignore  .gitmodules  .oxfmtrc.jsonc  .oxlintrc.jsonc  .vercelignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/: README.md
.github/workflows/: build-canvas.yml  check-generated-fbs.yml  consolidation-gates.yml  node.yml  test-crates.yml
app/: babel.config.js  next.config.js  package.json
app/mock/: export-node.json
app/pages/: _app.tsx  app.tsx  index.js
app/styles/: Home.module.css
archive/: README.md
archive/model-v2/: README.md
crates/cg/: Cargo.toml
crates/csscascade/: ARCHITECTURE.md  Cargo.toml  README.md
crates/csscascade/examples/: exp_impl_telement.rs  resolve_and_print.rs
crates/csscascade/src/: adapter.rs  cascade.rs  lib.rs
crates/csscascade/src/tree/: mod.rs
crates/csscascade/tests/: servo_svg_properties.rs  single_implementation.rs  stylo_dependency_provenance.rs
crates/fonts/: AGENTS.md  Cargo.toml
crates/grida/: AGENTS.md  Cargo.toml
crates/grida-canvas-wasm/: AGENTS.md  Cargo.toml  PUBLISHING.md  README.md  package.json
crates/grida_dev/: AGENTS.md  Cargo.toml  README.md  SCOREBOARD.md
crates/grida_editor/: Cargo.toml
crates/grida_wpt/: Cargo.toml
crates/htmlcss/: Cargo.toml  README.md
crates/htmlcss/src/: collect.rs  frontend.rs  github_markdown.rs  layout.rs  lib.rs  paint.rs  style.rs  styled_dom.rs  types.rs
crates/htmlcss/src/svg/: README.md  context.rs  mod.rs
crates/htmlcss/src/svg/dom/: mod.rs  parser.rs
crates/htmlcss/src/svg/geometry/: basic_shape.rs  mod.rs
crates/htmlcss/src/svg/layout/: bbox.rs  transform.rs  viewport.rs
crates/htmlcss/src/svg/paint/: clip_path_clipper.rs  effects.rs  scoped_svg_paint_state.rs  svg_container_painter.rs  svg_image_painter.rs  svg_marker_painter.rs  svg_root_painter.rs  svg_shape_painter.rs  svg_use_painter.rs
crates/htmlcss/src/svg/paint/svg_text_painter/: mod.rs
crates/htmlcss/src/svg/resources/: clipper.rs  filter.rs  gradient.rs  masker.rs  paint_server.rs  pattern.rs  svg_filter_builder.rs  svg_resources.rs
crates/htmlcss/src/svg/style/: mod.rs  stylesheet.rs
crates/htmlcss/tests/: architecture.rs  svg_architecture.rs  svg_checkpoint1.rs
crates/math2/: Cargo.toml  README.md
crates/n0/: ANIMATION.md  Cargo.toml  DATA-MODEL.md  EFFECTIVE-VALUES.md  MEASURE.md  README.md
crates/n0-model/: Cargo.toml  README.md
crates/n0-model/src/: lib.rs  math.rs  measure.rs  model.rs  n0_xml.rs  n0_xml_source.rs  ops.rs  resolve.rs  svgout.rs  textir.rs
crates/n0-model/tests/: accessors.rs  animation.rs  animation_path_curves.rs  animation_profile5_paints.rs  arena_pick.rs  composition.rs  derived.rs  draft0_resolution.rs  edge_census.rs  escape.rs  flip.rs  generations.rs  geometry.rs  grida_xml_attributed_text.rs  grida_xml_corners.rs  grida_xml_paints.rs  grida_xml_paths.rs  grida_xml_properties.rs  grida_xml_source.rs  grida_xml_source_v2.rs  grida_xml_source_v3.rs  grida_xml_source_v4.rs  grida_xml_stroke_widths.rs  grida_xml_strokes.rs  grida_xml_suite.rs  layout.rs  lens_ops_properties.rs  mm_laws.rs  n0_xml_attributed_text.rs  n0_xml_corners.rs  n0_xml_paints.rs  n0_xml_paths.rs  n0_xml_properties.rs  n0_xml_source.rs  n0_xml_source_v2.rs  n0_xml_source_v3.rs  n0_xml_source_v4.rs  n0_xml_stroke_widths.rs  n0_xml_strokes.rs  n0_xml_suite.rs  (+14 more)
crates/n0-model/tests/common/: mod.rs
crates/n0/rig/: baselines.json
crates/n0/rig/examples/social-feed/: entry.n0.xml
crates/n0/src/: cache.rs  cache_drawlist_spike.rs  damage.rs  drawlist.rs  drawlist_vector_join_spike.rs  frame.rs  ident.rs  journal.rs  lib.rs  paint.rs  playback_clock.rs  query.rs  replay.rs  svg_animation_frame.rs  text_layout.rs
crates/n0/tests/: animation.rs  animation_profile5_paints.rs  animation_profile6_paths.rs  cache.rs  corners.rs  damage.rs  drawlist.rs  frame.rs  grida_xml.rs  grida_xml_examples.rs  grida_xml_slots.rs  grida_xml_social_feed.rs  grida_xml_source.rs  ident.rs  journal.rs  n0_xml.rs  n0_xml_examples.rs  n0_xml_slots.rs  n0_xml_social_feed.rs  n0_xml_source.rs  paints.rs  paths.rs  playback_clock.rs  query.rs  rectangular_strokes.rs  replay.rs  strokes.rs  svg_animation_frame.rs  text.rs  text_layout.rs  values.rs
crates/n0/tests/support/: mod.rs
crates/n0_cli/: Cargo.toml  README.md
crates/n0_cli/src/: main.rs
crates/n0_cli/tests/: architecture.rs
crates/n0_dev/: Cargo.toml  README.md  SPIKE.md  TEXTBOOK.md
crates/n0_dev/src/: camera.rs  interaction.rs  main.rs  paint.rs  scene.rs
crates/n0_dev/src/shell/: app.rs  hud.rs  mod.rs  player.rs  player_transport.rs
crates/rframe/: Cargo.toml
crates/rframe/src/: drawlist.rs  frame.rs  lib.rs  paint.rs
crates/rframe/tests/: architecture.rs  n0_canary.rs  paint_probe.rs
crates/websem/: Cargo.toml
crates/websem/examples/: render.rs
crates/websem/src/: lib.rs  svg.rs
crates/websem/tests/: architecture.rs  equivalence.rs  reftest_oracle.rs  viewport_contract.rs  webpage_mockup.rs
docs/contributing/: wpt.md
docs/history/: README.md  grida-migration-commit-map.txt
docs/wg/: consolidation.md  index.md
engine/: Cargo.toml  README.md
engine/src/: main.rs
engine/web/: index.html
experiments/: README.md
experiments/performance/: package.json
experiments/skia-wasm/: README.md
experiments/wgpu-2d/: package.json  types.d.ts
fixtures/css/: README.md
fixtures/fonts/: README.md
fixtures/test-html/: README.md
fixtures/text-editor/: README.md
fixtures/web-first/: README.md  bake_chromium.ts  html-inline-svg-currentcolor-rect.html  html-webpage-mockup.html  oracle-bake.json  primitives.json
format/: AGENTS.md  README.md
model-v2/: README.md  axes.md  finale.md
model-v2/a/: README.md
nothing/: Cargo.toml
nothing/src/: image_node.rs  k.rs  lib.rs  main.rs  rectangle.wgsl  triangle.wgsl
nothing/src/render_backend/: renderer.rs
nothing/src/shaders/: node.wgsl
nothing/src/types/: mod.rs
www/: .gitignore  .oxlintrc.jsonc  README.md  next.config.mjs  package.json  proxy.ts  source.config.ts
(+366 files in other folders)
