[workspace]
resolver = "3"
members = [
  "crates/grida",
  "crates/grida_editor",
  "crates/grida-canvas-wasm",
  "crates/fonts",
  "crates/grida_dev",
  "crates/grida_wpt",
  "crates/csscascade",
  "crates/math2",
  "crates/n0",
  "crates/n0-model",
  "crates/n0_dev",
]

# Inherited only by crates that opt in via `.workspace = true` (currently n0).
# The migrated engine crates keep their explicit per-crate metadata.
[workspace.package]
edition = "2024"
homepage = "https://nothing.graphics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gridaco/nothing"

[workspace.lints.rust]
unreachable_pub = "warn"
unused = "warn"

[workspace.lints.clippy]
# Style choices for a graphics engine — intentionally allowed
upper_case_acronyms = "allow" # AABB, RGB, HSL, SVG are domain terms
too_many_arguments = "allow" # geometry passes many scalar params (x, y, w, h, cos, sin, …); 27 sites had voted before this was made explicit

# Reduce debug information for tests to lower memory usage during linking in CI
# opt-level = 1 speeds up compilation while maintaining debuggability
[profile.test]
opt-level = 1
debug = 1
