[package]
name = "csscascade"
version = "0.0.0"
edition = "2024"
autobins = false
authors = ["Grida <hello@grida.co>", "Universe <universe@grida.co>"]
description = "Internal namespace-aware DOM and Stylo cascade bridge"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
# D-L temporarily requires an official Git revision newer than Stylo 0.19.0.
# Refuse packaging until a published Stylo release contains the required work;
# otherwise Cargo would replace the reviewed Git source with registry crates.
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
# css parsing
# (+2.5mb wasm32-unknown-emscripten)
stylo.workspace = true
selectors.workspace = true
stylo_dom.workspace = true
stylo_atoms.workspace = true
style_traits.workspace = true
url = "2.5"
euclid = "0.22.11"

# below deps are already included in stylo, this does not increase bundle size, we have them for ease of use
cssparser = "0.37.0"
html5ever = "0.36.1"
markup5ever = "0.36.1"
tendril = "0.4.3"
atomic_refcell = "0.1.13"

[lints]
workspace = true
