[package]
name = "n0"
version = "0.0.0"
edition = "2021"
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "A 2D graphics engine."
categories = ["graphics", "rendering"]
keywords = ["graphics", "2d", "rendering", "engine"]
readme = "README.md"

[features]
# observability compiled to zero unless asked — the profiler must never
# distort the profile.
trace = []
# The headless-GPU probe (probe_gpu): real GL flush timing for the two
# GPU-only wins (scene raster cache, layerization) that raster mis-signs.
# Optional so the default raster build (probe, gate, n0_dev) stays GL-free.
native-gl-context = ["dep:glutin", "dep:gl", "dep:raw-window-handle"]

[dependencies]
# serde feature ON: the op-log wire for replay (`Op` becomes serializable).
n0-model = { path = "../n0-model", features = ["serde"] }
serde_json = "1.0"
sha2 = "0.10"

# `use skia_safe` stays confined to paint.rs — raster access is a single
# module's concern (see src/lib.rs).
skia-safe = { version = "=0.93.1", features = [
  "gpu",
  "gl",
  "textlayout",
  "pdf",
  "svg",
  "webp",
] }

# Headless-GPU probe only (feature native-gl-context). Versions match the
# workspace winit hosts (n0_dev / grida_dev).
glutin = { version = "0.32.0", optional = true }
gl = { version = "0.14.0", optional = true }
raw-window-handle = { version = "0.6.0", optional = true }
