[package]
name = "rframe"
version = "0.0.0"
edition = "2024"
description = "PROVISIONAL, INTERNAL, BREAKABLE. The Web-first track's source-neutral resolved render contract (`Frame`), its private drawlist, and the one Skia painter. Shaped by two producers (websem, the n0 canary) so a later evidence spike can decide the join point. Not published; not a file format; no round-trip promise."
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# Neutral geometry foundation shared across the workspace (Skia-free).
math2 = { path = "../math2" }

# The one backend. `use skia_safe` stays confined to `paint.rs` (enforced by
# tests/architecture.rs) — the resolved contract and the drawlist are Skia-free.
# Feature set matches crates/n0 so the workspace shares a single Skia build.
skia-safe = { version = "=0.93.1", features = [
  "gpu",
  "gl",
  "textlayout",
  "pdf",
  "svg",
  "webp",
] }

[dev-dependencies]
# The source-neutrality canary: a non-Web producer (n0) reaching the same
# downstream. Test-only — rframe itself has NO n0 dependency.
n0-model = { path = "../n0-model" }

[lints]
workspace = true
