[package]
name = "websem"
version = "0.0.0"
edition = "2024"
description = "PROVISIONAL, INTERNAL, BREAKABLE. The Web-first track's Web semantic front-end: one namespace-aware document + one Stylo cascade + one SVG semantic compiler, lowering HTML-with-inline-SVG and the current bare-SVG scaffold to `rframe::Frame`. A conforming standalone SVG/XML grammar entry remains required. No I/O, no network, no legacy import path."
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
# The source-neutral resolved render contract this crate produces. The normal
# front-end edge is backend-free; tests/examples opt into the painter below.
rframe = { path = "../rframe", default-features = false }
# Neutral geometry.
math2 = { path = "../math2" }
# The one namespace-aware document + the one (Stylo) browser-grade cascade.
csscascade = { path = "../csscascade" }
# Read computed values (e.g. `color`) out of the shared cascade. Imported as `style`.
stylo = "0.16"

[dev-dependencies]
# Pixel gates exercise the one Skia painter. This does not widen websem's
# normal library dependency graph.
rframe = { path = "../rframe", features = ["skia"] }
# Crate-cut debt: these two declarations became unused when the render host
# moved to n0_cli. They remain for this crate-addition commit because the
# mandatory Cargo.lock additions-only gate forbids removing their existing
# lock-entry lines in the same cut. Subtract them after the crate cut lands.
htmlcss = { path = "../htmlcss" }
skia-safe = { version = "=0.93.1", features = [
  "gpu",
  "gl",
  "textlayout",
  "pdf",
  "svg",
  "webp",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[lints]
workspace = true
